--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> To move the tiles, use your <strong>arrow keys</strong> for up, right, down, left; R, F, D, E for up-right, down-right, down-left, and up-left. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> To move the tiles, use your <strong>arrow keys</strong> for up, right, down, left; T, G, F, R for up-right, down-right, down-left, and up-left. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
     <p>
